refactor: 빈칸,공백,null 검사 로직을 위해 StringUtils 클래스 활용